feat(driver-adapters-wasm): add Qwik + Turso example + Vercel Edge

--- a/driver-adapters-wasm/turso-vercel-qwik-edgemw/package.json
+++ b/driver-adapters-wasm/turso-vercel-qwik-edgemw/package.json
@@ -15,6 +15,7 @@
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
+    "build.server": "vite build -c adapters/vercel-edge/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
     "deploy": "./run.sh",
     "dev": "vite --mode vercel-edge",
