feat(driver-adapters-wasm): add "turso-vercel-qwik-edgemw"

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -371,6 +371,7 @@ jobs:
           - turso-cf-basic
           - turso-cfpages-basic
           - turso-vercel-nextjs-edgemw
+          - turso-vercel-qwik-edgemw
           - d1-cf-basic
           - d1-cfpages-basic
           - d1-cfpages-nuxt
