--- a/driver-adapters/pglite-node-basic/package.json
+++ b/driver-adapters/pglite-node-basic/package.json
@@ -11,14 +11,11 @@
     "@types/jest": "29.5.12",
     "jest": "29.7.0",
     "prisma": "5.17.0-dev.38",
-    "ts-jest": "29.2.2",
     "typescript": "^5.4.5"
   },
   "dependencies": {
     "@electric-sql/pglite": "^0.1.5",
     "@prisma/client": "5.17.0-dev.38",
-    "pglite-prisma-adapter": "^0.2.0",
-    "ts-node": "10.9.2",
-    "tsx": "^4.11.2"
+    "pglite-prisma-adapter": "^0.2.0"
   }
 }
